# periphery-manager

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: test.yml
cmake/: EnableVcpkg.cmake
docs/: activity-diagram.puml  class-diagram.puml  periphery-manager.puml
source/: main.cpp
source/App/: App.cpp  App.h  SignalHandler.cpp  SignalHandler.h
source/AppInputs/: InputInterface.h  MessageServer.cpp  MessageServer.h  TcpMessageServer.cpp  TcpMessageServer.h
source/AppManager/: AppManager.cpp  AppManager.h
source/Logger/: ILogger.h  Logger.h  LoggerInterface.h  SpdLogAdapter.h  StdoutAdapter.h
source/Network/: InputInterface.h  NetworkInterface.h  SerialPortManager.cpp  SerialPortManager.h  TcpNetworkManager.cpp  TcpNetworkManager.h
source/PeripheryManager/: AbstractDevice.cpp  AbstractDevice.h  AbstractPeriphery.cpp  AbstractPeriphery.h  CommunicationInterface.cpp  CommunicationInterface.h  CommunicationMock.h  CommunicationTcpClient.cpp  CommunicationTcpClient.h  Ethernet.cpp  Ethernet.h  HwInterface.h  HwMock.h  ProtocolInterface.h  Sensor.cpp  Sensor.h  TcpClient.cpp  TcpClient.h  TemperatureSensor.cpp  TemperatureSensor.h
tests/: AbstractPeripheryTests.cpp  AppTests.cpp  CMakeLists.txt  CommandDispatcherTests.cpp  CommandsTests.cpp  CommunicationInterfaceTests.cpp  DayCameraTests.cpp  EthernetTests.cpp  HwInterfaceTests.cpp  LoggerTests.cpp  LoopbackTcpServer.h  MessageServerTests.cpp  SchedulerTests.cpp  SensorTests.cpp  SerialPortManagerTests.cpp  TcpClientTests.cpp  TcpServerTests.cpp  TemperatureSensorTests.cpp
(+25 files in other folders)
